BasePackage/objects/Attempt__c/Attempt__c.object-meta.xml
<CustomObject>
    <label>Attempt</label>
    <nameField>
        <displayFormat>Attempt-{000000}</displayFormat>
        <label>Attempt Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attempts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>