BasePackage/objects/Attempt__c/fields/App_Deployment__c.field-meta.xml
<CustomField>
    <fullName>App_Deployment__c</fullName>
    <label>App Deployment</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>