BasePackage/objects/Attempt__c/fields/Business_Logic_and_Process_Automation__c.field-meta.xml
<CustomField>
    <fullName>Business_Logic_and_Process_Automation__c</fullName>
    <label>Business Logic and Process Automation</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>