BasePackage/objects/Attempt__c/fields/Change_Management__c.field-meta.xml
<CustomField>
    <fullName>Change_Management__c</fullName>
    <label>Change Management</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>