BasePackage/objects/Attempt__c/fields/Data_Modeling_and_Management__c.field-meta.xml
<CustomField>
    <fullName>Data_Modeling_and_Management__c</fullName>
    <label>Data Modeling and Management</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>