BasePackage/objects/Attempt__c/fields/Debugging_and_Error_Handling__c.field-meta.xml
<CustomField>
    <fullName>Debugging_and_Error_Handling__c</fullName>
    <label>Debugging and Error Handling</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>