BasePackage/objects/Attempt__c/fields/Extending_Custom_Objects_and_Application__c.field-meta.xml
<CustomField>
    <fullName>Extending_Custom_Objects_and_Application__c</fullName>
    <label>Extending Custom Objects and Application</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>