BasePackage/objects/Attempt__c/fields/Objects_Functions_and_Classes__c.field-meta.xml
<CustomField>
    <fullName>Objects_Functions_and_Classes__c</fullName>
    <label>Objects, Functions, and Classes</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>