BasePackage/objects/Attempt__c/fields/Passed__c.field-meta.xml
<CustomField>
    <fullName>Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>did you pass the exam</description>
    <label>Passed</label>
    <type>Checkbox</type>
</CustomField>