BasePackage/objects/Attempt__c/fields/Performance__c.field-meta.xml
<CustomField>
    <fullName>Performance__c</fullName>
    <label>Performance</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>