BasePackage/objects/Attempt__c/fields/Process_Automation__c.field-meta.xml
<CustomField>
    <fullName>Process_Automation__c</fullName>
    <label>Process Automation</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>