BasePackage/objects/Attempt__c/fields/Productivity_and_Collaboration__c.field-meta.xml
<CustomField>
    <fullName>Productivity_and_Collaboration__c</fullName>
    <label>Productivity and Collaboration</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>