BasePackage/objects/Attempt__c/fields/Sales_and_Marketing_Applications__c.field-meta.xml
<CustomField>
    <fullName>Sales_and_Marketing_Applications__c</fullName>
    <label>Sales and Marketing Applications</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>