BasePackage/objects/Attempt__c/fields/Salesforce_Fundamentals__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Fundamentals__c</fullName>
    <label>Salesforce Fundamentals</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>