BasePackage/objects/Attempt__c/fields/Security_and_Access__c.field-meta.xml
<CustomField>
    <fullName>Security_and_Access__c</fullName>
    <label>Security and Access</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>