BasePackage/objects/Attempt__c/fields/Server_Side_JavaScript__c.field-meta.xml
<CustomField>
    <fullName>Server_Side_JavaScript__c</fullName>
    <label>Server Side JavaScript</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>