BasePackage/objects/Attempt__c/fields/Service_Cloud_Applications__c.field-meta.xml
<CustomField>
    <fullName>Service_Cloud_Applications__c</fullName>
    <label>Service Cloud Applications</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>