BasePackage/objects/Attempt__c/fields/Testing__c.field-meta.xml
<CustomField>
    <fullName>Testing__c</fullName>
    <label>Testing</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>