BasePackage/objects/Attempt__c/fields/textDate__c.field-meta.xml
<CustomField>
    <fullName>textDate__c</fullName>
    <formula>TEXT(Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>textDate</label>
    <type>Text</type>
</CustomField>