BasePackage/objects/Attempt__c/fields/User_Interface__c.field-meta.xml
<CustomField>
    <fullName>User_Interface__c</fullName>
    <label>User Interface</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>