BasePackage/objects/Attempt__c/recordTypes/ADM.recordType-meta.xml
<RecordType>
    <fullName>ADM</fullName>
    <active>true</active>
    <label>Administrator</label>
</RecordType>