BasePackage/objects/Attempt__c/recordTypes/Advanced_ADM.recordType-meta.xml
<RecordType>
    <fullName>Advanced_ADM</fullName>
    <active>true</active>
    <label>Advanced Administrator</label>
</RecordType>