BasePackage/objects/Attempt__c/recordTypes/JS_Developer_1.recordType-meta.xml
<RecordType>
    <fullName>JS_Developer_1</fullName>
    <active>true</active>
    <label>JavaScript Developer I</label>
</RecordType>