BasePackage/objects/Attempt__c/recordTypes/PD1.recordType-meta.xml
<RecordType>
    <fullName>PD1</fullName>
    <active>true</active>
    <label>Platform Developer I</label>
</RecordType>