BasePackage/objects/Attempt__c/recordTypes/PD2.recordType-meta.xml
<RecordType>
    <fullName>PD2</fullName>
    <active>true</active>
    <label>Platform Developer II</label>
</RecordType>