BasePackage/objects/Attempt__c/recordTypes/Platform_App_Builder.recordType-meta.xml
<RecordType>
    <fullName>Platform_App_Builder</fullName>
    <active>true</active>
    <label>Platform App Builder</label>
</RecordType>