BasePackage/objects/Attempt__c/validationRules/Type_Match_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_Match_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Attempt_Type__c , &quot;Certification&quot;)  &lt;&gt;  ISPICKVAL( Voucher__r.Voucher_Type__c , &quot;Certification&quot;)</errorConditionFormula>
    <errorDisplayField>Attempt_Type__c</errorDisplayField>
    <errorMessage>Please select a valid type.</errorMessage>
</ValidationRule>