BasePackage/objects/Attempt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attempt_Type__c</columns>
    <columns>Voucher__c</columns>
    <columns>Passed__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>